added some fixes to the code